--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,17 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --primary-dark: #043873;
+  --primary-light: #4F9CF9;
+  --secondary: #FFE492;
+  --secondary-dark: #212529;
+  --secondary-light: #A7CEFC;
+  --secondary-lighter: #FFFFFF;
 }
 
 @theme inline {
-  --color-background: var(--background);
+  --color-background: var(--primary-dark);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
